# sha1-macros

./: Cargo.toml  README.md
src/: lib.rs
